spacing fix

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -505,6 +505,7 @@ header {
     background-color: #8ac6e279;
     backdrop-filter: blur(10.2px);
     z-index: 1000;
+    padding: 0 1.6rem 1.6rem 1.6rem;
 }
 
 header.bg-nav {
@@ -692,7 +693,6 @@ header nav li a:focus {
 
 .videos lite-youtube {
     margin-bottom: 8px;
-    flex: 1;
 }
 
 .author-info {
@@ -730,25 +730,13 @@ header nav li a:focus {
 .author-videos {
     display: flex;
     overflow-x: auto;
-    gap: 1.5rem;
+    gap: 1.6rem;
     padding-top: 1rem;
 }
 
-.video-container {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-}
-
-.video-container div a {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-decoration: none;
-}
-
-.video-wrapper {
-    width: 100%;
+.author-videos > * {
+    flex: 1 1 0;
+    max-width: 280px;
 }
 
 .video-container div a:hover,
@@ -1005,6 +993,7 @@ footer .divider {
         z-index: auto;
         width: auto;
         box-shadow: unset;
+        padding: unset;
     }
 
     .navbar-content {
